--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,17 @@
 @charset "utf-8";
 /* CSS Document */
 
+@font-face {
+	font-family: 'BebasNeueRegular';
+	src: url('fonts/BebasNeue-webfont.eot');
+	src: url('fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+			 url('fonts/BebasNeue-webfont.woff') format('woff'),
+			 url('fonts/BebasNeue-webfont.ttf') format('truetype'),
+			 url('fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 #wrapper {
 	padding: 0px;
 	width: 100%;
@@ -9,4 +20,129 @@
 	margin-bottom: 0px;
 	margin-left: 0px;
 	overflow: auto;
+}
+
+#wrapper_inside {
+	width: 100%;
+	border-top-width: 0px;
+	border-right-width: 0px;
+	border-bottom-width: 0px;
+	border-left-width: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	padding: 0px;
+}
+
+#menu {
+	width: 220px;
+	height: 100%;
+	display: block;
+	float: left;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	background-color: #494c51;
+	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
+}
+
+#content {
+	display: block;
+	background-color: #d9d6c7;
+	margin-left: 220px;
+	padding-left: 30px;
+	padding-top: 30px;
+}
+
+body {
+	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
+	background-color: #d9d6c7;
+}
+
+img {
+	border: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+
+
+
+
+#menu_colorline1, #menu_colorline2 {
+	width: 5px;
+	height: 100%;
+	float: left;
+	position: fixed;
+	top: 0px;
+}
+
+#menu_colorline1 {
+	left: 0px;
+	background-color: #3c2116;
+}
+
+#menu_colorline2 {
+	left: 5px;
+	background-color: #ea6a19;
+}
+
+#menu_logo {
+	width: 180px;
+	height: 180px;
+	display: block;
+	margin-top: 40px;
+	margin-right: 25px;
+	margin-bottom: 25px;
+	margin-left: 25px;
+}
+
+.menu_sectionline {
+	width: 210px;
+	height: 10px;
+	display: block;
+	margin-top: 15px;
+	margin-right: 0px;
+	margin-bottom: 15px;
+	margin-left: 10px;
+}
+
+#menu ul {
+	list-style-type: none;
+	display: block;
+	margin-top: 25px;
+	margin-right: 0px;
+	margin-bottom: 25px;
+	margin-left: 10px;
+	padding: 0px;
+}
+
+#menu li {
+	text-align: center;
+	font-size: 25pt;
+	margin-top: 10px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 0px;
+	padding: 8px;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+}
+
+#menu li a:link {
+	color: #e4e4dc;
+}
+
+#menu li a:visited {
+	color: #e4e4dc;
+}
+
+#menu li a:hover {
+	color: #ffde00;
+}
+
+#menu li a:active {
+	color: #ffde00;
 }
