Done with content layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 		<title>YWPARK</title>
   	<%= csrf_meta_tag %>
 		<%= render 'layouts/stylesheets' %>
+		<%= render 'layouts/javascripts' %>
 	</head>
 	<body>
 		<div id="wrapper">
