--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,7 @@
 <div id="menu">
 	<div id="menu_colorline1"></div>
 	<div id="menu_colorline2"></div>
-	<%= image_tag("menu/logo.png", :alt => "Logo", :id => "menu_logo") %>
+	<%= link_to logo, root_path %>
 	<%= image_tag("menu/sectionline.png", :alt => "Section Line Top", 
 								 :class => "menu_sectionline") %>
 	<ul>
