--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -19,7 +19,7 @@
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 #wrapper_inside {
@@ -33,8 +33,6 @@
 	margin-bottom: 0px;
 	margin-left: 0px;
 	padding: 0px;
-	overflow-y: scroll;
-	overflow-x: hidden;
 }
 
 #menu {
