--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 				<%= render 'layouts/menu' %>
 				<div id="content">
 					<%= yield %>
+					<%= render 'layouts/footer' %>
 				</div>
 			</div>
 		</div>
