--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,5 @@
 <%= title_img %>
-<div id="content_inside" class="round">
+<div id="content_inside_wrapper" class="round">
+	<div id="content_inside">
+	</div>
 </div>
