--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -47,13 +47,13 @@
 }
 
 body {
-	font-family: 'MyriadPro-Semibold', Helvetica, sans-serif;
+	font-family: 'Trebuchet MS', Helvetica, sans-serif;
 	background-color: #d9d6c7;
 }
 
 h3 {
 	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
-	font-size: 18pt;
+	font-size: 23px;
 	color: #c0bca7;
 	padding: 0px;
 	margin-top: 0px;
