--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -18,6 +18,7 @@
 														 "padding-right":title_pad});
 		$("#content_sectionline").css({"padding-left":section_pad, 
 														 			 "padding-right":section_pad});
+		/*$("#content_sectiontext").css({"padding-left":section_pad});*/
 		
 		lastBlock = $("#resume_slide_al");
 		maxWidth = w_in - 335;
@@ -48,6 +49,7 @@
 														 "padding-right":title_pad});
 		$("#content_sectionline").css({"padding-left":section_pad, 
 														 			 "padding-right":section_pad});
+		/*$("#content_sectiontext").css({"padding-left":section_pad});*/
 		
 		lastBlock = $("#resume_slide_al");
 		maxWidth = w_in - 335;
