--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -60,9 +60,8 @@
 <%= image_tag("content/sectionline.png", :alt => "Section Line",
 					 		:id => "content_sectionline") %>
 <div id="content_sectiontext">
-	<h3>
-		KEEP A COPY OF MY RESUME
-	</h3>
+	<%= image_tag("resume/sectiontext.png", :alt => "Section Text",
+						 		:class => "icon") %>
 	<%= image_tag("content/pdf_logo.png", :alt => "PDF Logo",
 						 		:class => "icon") %>
 	<%= image_tag("content/word_logo.png", :alt => "WORD Logo",
