--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -18,7 +18,7 @@
 														 "padding-right":title_pad});
 		$("#content_sectionline").css({"padding-left":section_pad, 
 														 			 "padding-right":section_pad});
-		$("#content_sectiontext").css({"padding-left":section_pad + 2});
+		$("#content_sectiontext").css({"padding-left":section_pad});
 		$("#footer p").css({"padding-left":section_pad + 45});
 		
 		lastBlock = $("#resume_slide_al");
@@ -50,7 +50,7 @@
 														 "padding-right":title_pad});
 		$("#content_sectionline").css({"padding-left":section_pad, 
 														 			 "padding-right":section_pad});
-		$("#content_sectiontext").css({"padding-left":section_pad + 2});
+		$("#content_sectiontext").css({"padding-left":section_pad});
 		$("#footer p").css({"padding-left":section_pad + 45});
 		
 		lastBlock = $("#resume_slide_al");
