--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -4,68 +4,54 @@
 <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.slide.js"></script>
 
 <script type="text/javascript">
+	
+	/* When window is resized, adjust content section padding */
+	function contentPadding() {
+		var w = $(window).width();
+		var w_in = (w < 1100) ? 780 : 
+								((w > 1400) ? 1080 : (780 + (w - 1100)));
+		var pad = (w < 1400) ? 50 : (50 + (w - 1400) * 0.5);
+		var title_pad = (w_in - 750) * 0.5;
+		var section_pad = (w_in - 360) * 0.5;
+
+		$("#content_inside_wrapper").css({"width":w_in});
+		$("#content").css({"padding-left":pad, "padding-right":pad});
+		$("#content_title").css({"padding-left":title_pad, 
+														 "padding-right":title_pad});
+		$("#content_sectionline").css({"padding-left":section_pad, 
+														 			 "padding-right":section_pad});
+		$("#content_sectiontext").css({"padding-left":section_pad});
+		$("#footer p").css({"padding-left":section_pad + 45});
+	}
+
+	/* Code for resume accordion menu */
+	function resumeAccordion() {
+		var w = $(window).width();
+		var w_in = (w < 1100) ? 780 : 
+								((w > 1400) ? 1080 : (780 + (w - 1100)));
+		lastBlock = $("#resume_accordion_sel");
+		maxWidth = w_in - 265;
+		minWidth = 50;
+		
+		$("ul#resume_accordion li ul").css({"width":maxWidth - 60});
+		$("#resume_accordion_sel").css({"width":maxWidth});
+
+		$("ul#resume_accordion li a").click(function() {
+			$(lastBlock).animate({width: minWidth+"px"}, { queue:false, duration:400 });
+			$(this).animate({width: maxWidth+"px"}, { queue:false, duration:400 });
+			$(lastBlock).removeAttr('id');
+			lastBlock = this;
+			$(this).attr('id', "resume_accordion_sel");
+		});
+	}
+	
 	$(document).ready(function() {
-		var w = $(window).width();
-		var w_in = (w < 1100) ? 780 : 
-								((w > 1400) ? 1080 : (780 + (w - 1100)));
-		var pad = (w < 1400) ? 50 : (50 + (w - 1400) * 0.5);
-		var title_pad = (w_in - 750) * 0.5;
-		var section_pad = (w_in - 360) * 0.5;
-
-		$("#content_inside_wrapper").css({"width":w_in});
-		$("#content").css({"padding-left":pad, "padding-right":pad});
-		$("#content_title").css({"padding-left":title_pad, 
-														 "padding-right":title_pad});
-		$("#content_sectionline").css({"padding-left":section_pad, 
-														 			 "padding-right":section_pad});
-		$("#content_sectiontext").css({"padding-left":section_pad});
-		$("#footer p").css({"padding-left":section_pad + 45});
-		
-		lastBlock = $("#resume_slide_al");
-		maxWidth = w_in - 335;
-		minWidth = 50;
-		$("#resume_slide ul li p").css({"width":maxWidth - 60});
-		$("#resume_slide_al").css({"width":maxWidth});
-
-		$("#resume_slide ul li a").click(function() {
-			$(lastBlock).animate({width: minWidth+"px"}, { queue:false, duration:400 });
-			$(this).animate({width: maxWidth+"px"}, { queue:false, duration:400 });
-			$(lastBlock).removeAttr('id');
-			lastBlock = this;
-			$(this).attr('id', "resume_slide_al");
+		$(window).resize(function() {
+			contentPadding();
+			resumeAccordion();
 		});
-	});
 
-	$(window).resize(function() {
-		var w = $(window).width();
-		var w_in = (w < 1100) ? 780 : 
-								((w > 1400) ? 1080 : (780 + (w - 1100)));
-		var pad = (w < 1400) ? 50 : (50 + (w - 1400) * 0.5);
-		var title_pad = (w_in - 750) * 0.5;
-		var section_pad = (w_in - 360) * 0.5;
-		
-		$("#content_inside_wrapper").css({"width":w_in});
-		$("#content").css({"padding-left":pad, "padding-right":pad});
-		$("#content_title").css({"padding-left":title_pad, 
-														 "padding-right":title_pad});
-		$("#content_sectionline").css({"padding-left":section_pad, 
-														 			 "padding-right":section_pad});
-		$("#content_sectiontext").css({"padding-left":section_pad});
-		$("#footer p").css({"padding-left":section_pad + 45});
-		
-		lastBlock = $("#resume_slide_al");
-		maxWidth = w_in - 335;
-		minWidth = 50;
-		$("#resume_slide ul li p").css({"width":maxWidth - 60});
-		$("#resume_slide_al").css({"width":maxWidth});
-
-		$("#resume_slide ul li a").click(function() {
-			$(lastBlock).animate({width: minWidth+"px"}, { queue:false, duration:400 });
-			$(this).animate({width: maxWidth+"px"}, { queue:false, duration:400 });
-			lastBlock = this;
-			$(lastBlock).removeAttr('id');
-			lastBlock = this;
-			$(this).attr('id', "resume_slide_al");
-		});
+		contentPadding();
+		resumeAccordion();
 	});
 </script>
