--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -207,28 +207,24 @@ a {
 
 /****** Resume ******/
 
-#resume_slide {
+ul#resume_accordion {
+	list-style: none;
 	display: block;
 	margin-top: 10px;
-	margin-right: 15px;
+	margin-right: 5px;
 	margin-bottom: 10px;
-	margin-left: 25px;
-}
-
-#resume_slide ul {
-	list-style: none;
-	margin: 0px;
+	margin-left: 15px;
 	padding: 0px;
 }
 
-#resume_slide ul li {
+ul#resume_accordion li {
 	float: left;
 	display: block;
-	padding: 5px;
-	margin-top: 15px;
+	padding: 0px;
+	margin-top: 20px;
 }
 
-#resume_slide ul li a {
+ul#resume_accordion li a {
 	display: block;
 	float: left;
 	overflow: hidden;
@@ -236,18 +232,19 @@ a {
 	height: 460px;
 }
 
-#resume_slide ul li img {
+ul#resume_accordion li img {
 	display: block;
 	float: left;
 }
 
-#resume_slide ul li p {
-	margin-top: 30px;
+ul#resume_accordion li ul {
+	list-style: inside url('content/logo_small.png');
+	margin-top: 5px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 10px;
 	padding: 0px;
-	height: 400px;
+	height: 450px;
 	display: block;
 	float: left;
 }
