--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -6,9 +6,28 @@
 				<a id="resume_accordion_sel">
 					<%= image_tag("/images/resume/resume_bar_education.png",
 						:mouseover => "/images/resume/resume_bar_education_hover.png") %>
-					<ul>
-						<li>Education</li>
-					</ul>
+					<table class="resume_content">
+						<tr>
+							<th>Education</th>
+						</tr>
+						<tr>
+							<td class="fit"><b>Carnegie Mellon University</b> Pittsburgh, PA</td>
+						</tr>
+						<tr>
+							<td class="fit">M.S. in Electrical and Computer Engineering</td>
+							<td>December 2014</td>
+						</tr>
+						<tr>
+							<td class="fit">B.S. in Electrical and Computer Engineering</td>
+							<td>December 2013</td>
+						</tr>
+						<tr>
+							<td class="fit">Minor in Computer Science</td>
+						</tr>
+						<tr>
+							<td class="fit indent">Overall GPA: 3.92/4.00</td>
+						</tr>
+					</table>
 				</a>
 			</li>
 
@@ -16,9 +35,6 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_skills.png",
 						:mouseover => "/images/resume/resume_bar_skills_hover.png") %>
-					<ul>
-						<li>Skills</li>
-					</ul>
 				</a>
 			</li>
 
@@ -26,9 +42,6 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_work.png",
 						:mouseover => "/images/resume/resume_bar_work_hover.png") %>
-					<ul>
-						<li>Work Experience</li>
-					</ul>
 				</a>
 			</li>
 
@@ -36,9 +49,6 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_projects.png",
 						:mouseover => "/images/resume/resume_bar_projects_hover.png") %>
-					<ul>
-						<li>Projects</li>
-					</ul>
 				</a>
 			</li>
 
@@ -46,9 +56,6 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_awards.png",
 						:mouseover => "/images/resume/resume_bar_awards_hover.png") %>
-					<ul>
-						<li>Awards</li>
-					</ul>
 				</a>
 			</li>
 		</ul>
