--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -80,6 +80,7 @@ a {
 	left: 0px;
 	top: 0px;
 	background-color: #494c51;
+	box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.2);
 	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
 }
 
@@ -210,7 +211,7 @@ a {
 ul#resume_accordion {
 	list-style: none;
 	display: block;
-	margin-top: 10px;
+	margin-top: 30px;
 	margin-right: 5px;
 	margin-bottom: 10px;
 	margin-left: 15px;
@@ -218,10 +219,7 @@ ul#resume_accordion {
 }
 
 ul#resume_accordion li {
-	float: left;
-	display: block;
 	padding: 0px;
-	margin-top: 20px;
 }
 
 ul#resume_accordion li a {
@@ -237,16 +235,38 @@ ul#resume_accordion li img {
 	float: left;
 }
 
-ul#resume_accordion li ul {
-	list-style: inside url('content/logo_small.png');
+table.resume_content {
 	margin-top: 5px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 10px;
-	padding: 0px;
-	height: 450px;
-	display: block;
-	float: left;
+	padding-top: 20px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	width: 470px;
+}
+
+table.resume_content th {
+	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
+	font-size: 24pt;
+	font-weight: normal;
+	text-align: left;
+	padding-bottom: 20px;
+}
+
+table.resume_content td {
+	font-size: 11pt;
+	padding-left: 15px;
+	padding-bottom: 5px;
+	white-space: nowrap;
+}
+
+table.resume_content td.indent {
+	padding-left: 45px;
+}
+
+table.resume_content td.fit {
+	width: 1px;
 }
 
 /****** Footer ******/
