--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -250,6 +250,7 @@ table.resume_content th {
 	font-family: 'BebasNeueRegular', Helvetica, sans-serif;
 	font-size: 24pt;
 	font-weight: normal;
+	color: #3c2116;
 	text-align: left;
 	padding-bottom: 20px;
 }
