Filled resume content

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -15,11 +15,11 @@
 						</tr>
 						<tr>
 							<td class="fit">M.S. in Electrical and Computer Engineering</td>
-							<td>December 2014</td>
+							<td class="fit">December 2014</td>
 						</tr>
 						<tr>
 							<td class="fit">B.S. in Electrical and Computer Engineering</td>
-							<td>December 2013</td>
+							<td class="fit">December 2013</td>
 						</tr>
 						<tr>
 							<td class="fit">Minor in Computer Science</td>
@@ -35,6 +35,31 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_skills.png",
 						:mouseover => "/images/resume/resume_bar_skills_hover.png") %>
+					<table class="resume_content">
+						<tr>
+							<th>Skills</th>
+						</tr>
+						<tr>
+							<td class="fit top_align more_margin"><b>Areas of Interest</b></td>
+							<td class="more_margin">Computer Systems, Embedded Systems, 
+									Software Development, Signal Processing, Web Applications</td>
+						</tr>
+						<tr>
+							<td class="fit top_align more_margin"><b>Programming Languages</b></td>
+							<td class="more_margin">C/Objective-C/C++/C#, Java, Assembly, 
+									OpenGL, Verilog, Ruby</td>
+						</tr>
+						<tr>
+							<td class="fit top_align more_margin"><b>Applications</b></td>
+							<td class="more_margin">Adobe Photoshop CS5, Eclipse, MATLAB, 
+									Microsoft Office, Microsoft Visual Studio, Vim, Xcode</td>
+						</tr>
+						<tr>
+							<td class="fit top_align more_margin"><b>Operating Systems</b></td>
+							<td class="more_margin">Windows XP/Vista/7, Mac OS X, Red Hat Linux, 
+									Ubuntu, UNIX</td>
+						</tr>
+					</table>
 				</a>
 			</li>
 
@@ -42,6 +67,43 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_work.png",
 						:mouseover => "/images/resume/resume_bar_work_hover.png") %>
+					<table class="resume_content">
+						<tr>
+							<th>Work Experience</th>
+						</tr>
+						<tr>
+							<td class="fit"><b>Amazon Corporate LLC</b> Seattle, WA</td>
+						</tr>
+						<tr>
+							<td class="fit"><i>Software Development Engineer Intern</i></td>
+							<td class="fit">May 2011 - August 2011</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent">Worked for Shelfari team in Kindle & Books
+									Tech department.</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent more_margin">Worked on optimizing Shelfari.com
+									for mobile touch devices, mainly with C# and ASP.NET framework.</td>
+						</tr>
+						<tr>
+							<td class="fit"><b>Amazon Corporate LLC</b> Seattle, WA</td>
+						</tr>
+						<tr>
+							<td class="fit"><i>Software Development Engineer Intern</i></td>
+							<td class="fit">May 2010 - August 2010</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent">Worked for SmallParts team in Industrial &
+									Scientific department.</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent more_margin">Worked on generating feed for
+									Amazon's Google advertisement program, promotions widget, and multiple
+									images support in product detail page for SmallParts.com, mainly with
+									Java, Apache Struts, and Spring framework.</td>
+						</tr>
+					</table>
 				</a>
 			</li>
 
@@ -49,6 +111,50 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_projects.png",
 						:mouseover => "/images/resume/resume_bar_projects_hover.png") %>
+					<table class="resume_content">
+						<tr>
+							<th>Projects</th>
+						</tr>
+						<tr>
+							<td class="fit"><b>De-Mole-Lish!</b></td>
+							<td class="fit">July 2010 - Present</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent">Developing an enhanced version of Whack-a-Mole
+									game that runs on iOS in a team of four students.</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent more_margin">Improving open source game engine
+									and adding contents of the game with Objective-C and OpenGL.</td>
+						</tr>
+						<tr>
+							<td class="fit"><b>Four Lokomotion</b></td>
+							<td class="fit">May 2011</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent">Implemented a rotating gaming device with
+									four screens in a team of four students.</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent more_margin">Implemented a Tetris game that runs
+									on the device. Game on each screen can communicate with games on other
+									screens via central microcontroller.</td>
+						</tr>
+						<tr>
+							<td class="fit"><b>Real-Time Operating System</b></td>
+							<td class="fit">November 2010</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent">Implemented a real-time kernel that allows
+									tasks to run on Gumstix Verdex Pro board with ARM assembly language
+									and C in a team of three students.</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="indent more_margin">Implemented SWI and IRQ handlers, 
+									context switcher, mutexes with highest locker priority protocol, 
+									rate-monotonic task scheduling algorithm, and UB admission test.</td>
+						</tr>
+					</table>
 				</a>
 			</li>
 
@@ -56,6 +162,17 @@
 				<a>
 					<%= image_tag("/images/resume/resume_bar_awards.png",
 						:mouseover => "/images/resume/resume_bar_awards_hover.png") %>
+					<table class="resume_content">
+						<tr>
+							<th>Awards</th>
+						</tr>
+						<tr>
+							<td class="fit"><b>Dean's List</b> Carnegie Institute of Technology</td>
+						</tr>
+						<tr>
+							<td class="indent">Spring/Fall 2009, Fall 2010, Spring 2011</td>
+						</tr>
+					</table>
 				</a>
 			</li>
 		</ul>
