--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -31,11 +31,11 @@
 								((w > 1400) ? 1080 : (780 + (w - 1100)));
 
 		lastBlock = $("#resume_accordion_sel");
-		maxWidth = w_in - 265;
+		maxWidth = w_in - 250;
 		minWidth = 50;
-		content_pad = ((maxWidth - 515) * 0.5) + 20;
+		content_pad = ((maxWidth - 530) * 0.5) + 30;
 		
-		$("table.resume_content").css({"padding-left":content_pad});
+		$("table.resume_content").css({"margin-left":content_pad});
 		$("#resume_accordion_sel").css({"width":maxWidth});
 
 		$("ul#resume_accordion li a").click(function() {
