--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -170,7 +170,7 @@
 							<td class="fit"><b>Dean's List</b> Carnegie Institute of Technology</td>
 						</tr>
 						<tr>
-							<td class="indent">Spring/Fall 2009, Fall 2010, Spring 2011</td>
+							<td class="fit more_margin">Spring/Fall 2009, Fall 2010, Spring 2011</td>
 						</tr>
 					</table>
 				</a>
