Added text resume

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -192,6 +192,8 @@
 			image_tag("content/word_logo.png", 
 			:alt => "WORD Logo", :class => "icon", :target => '_blank'),
 			'/files/resume_youngwop_20120514.doc') %>
-	<%= image_tag("content/txt_logo.png", :alt => "TXT Logo",
-						 		:class => "icon") %>
+	<%= link_to(
+			image_tag("content/txt_logo.png", 
+			:alt => "TXT Logo", :class => "icon", :target => '_blank'),
+			'/files/resume_youngwop_20120514.txt') %>
 </div>
