--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -183,7 +183,7 @@
 					 		:id => "content_sectionline") %>
 <div id="content_sectiontext">
 	<%= image_tag("resume/sectiontext.png", :alt => "Section Text",
-						 		:class => "icon") %>
+						 		:class => "icon", :id => "popupClick") %>
 	<%= link_to(
 			image_tag("content/pdf_logo.png", 
 			:alt => "PDF Logo", :class => "icon", :target => '_blank'),
