--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -69,6 +69,29 @@ a {
 	display: none;
 }
 
+#popupWindow {
+	display: none;
+	position: fixed;
+	_position: absolute;
+	height: 400px;
+	width: 400px;
+	background: #FFF;
+	z-index: 2;
+	padding: 10px;
+}
+
+#popupBackground {
+	display: none;
+	position: fixed;
+	_position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background: #000;
+	z-index:1;
+}
+
 /****** Menu ******/
 
 #menu {
