Added layout for projects

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,5 +1,25 @@
 <%= title_img %>
 <div id="content_inside_wrapper" class="round">
 	<div id="content_inside">
+		<div id="projects_slideshow">
+			<div id="projects_slidecontainer">
+				<div class="projects_slide">
+					<p>content 1</p>
+				</div>
+				<div class="projects_slide">
+					<p>content 2</p>
+				</div>
+				<div class="projects_slide">
+					<p>content 3</p>
+				</div>
+			</div>
+			<div id="projects_statusbar">
+				<div id="projects_statusbarinner">
+					<a class="projects_status" id="slide1">slide1</a>
+					<a class="projects_status" id="slide2">slide2</a>
+					<a class="projects_status" id="slide3">slide3</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
